postgresql-common (159) UNRELEASED; urgency=medium

  * Debconf translation updates, thanks!
    + da by Joe Dalton. (Closes: #753952)

 -- Christoph Berg <myon@debian.org>  Sun, 06 Jul 2014 18:44:21 +0200

postgresql-common (158) experimental; urgency=medium

  * supported-versions: Add 9.4 on Debian/unstable and pgapt (9.3 is still
    default).
  * Set default log_line_prefix = '%t [%p-%l] %q%u@%d '.
  * Put stats_temp_directory aka pg_stat_tmp into /var/run/postgresql by
    default. (Closes: #739276)
  * pg_lsclusters: Print logfile from postgresql.conf when logging_collector
    in use instead of "custom".
  * Move pg_{create,ctl,upgrade,drop}cluster.8 to section 1, they are in
    /usr/bin anyway.
  * maintscripts-functions: Configure manpage alternatives in -doc packages
    using SPI_connect.3.gz as master.
  * pg_upgradecluster: Deprecate krb_srvname in 9.4. Failing upgrade hook
    scripts will fail the upgrade.
  * pg_ctlcluster: Configure OOM killer using PG_OOM_ADJUST_FILE in 9.5.
  * pg_wrapper: Also accept --cluster=ver/name in a single argument.
  * testsuite: Also mount /dev/shm; with -s, open shell on failure; -f nnn
    starts tests at this sequence number.
  * run-upgrade-scripts, t/100_upgrade_scripts.t: Fork and set uid for running
    the upgrade scripts; use su -c for testing.
  * Start porting the postgresql-common framework to RedHat, backed by the
    PGDG PostgreSQL rpm packages.
  * Debconf translation updates, thanks!
    + fr by Julien Patriarca. (Closes: #751101)
    + ja by victory. (Closes: #751131)
  * debian/copyright: Update copyright holders.

 -- Christoph Berg <myon@debian.org>  Sat, 05 Jul 2014 16:40:16 +0200

postgresql-common (157) unstable; urgency=medium

  * Remove createcluster.conf on purge.
  * Fix testsuite -i to install packages before invoking unshare so apt still
    has network access.

 -- Christoph Berg <myon@debian.org>  Fri, 30 May 2014 21:31:36 +0200

postgresql-common (156) unstable; urgency=medium
